syntax = "proto3";

option java_multiple_files=true;
option java_package="narif.poc.grpc101.greetings";

package grpc101.greetings;

service GreeterRPC {

  rpc GreetUser(GreetingRequest) returns (GreetingResponse) {}

  rpc GreetUserStream(GreetingRequest) returns (stream GreetingResponse) {}

  rpc GreetUsersAtOnce(stream GreetingRequest) returns (GreetingResponse) {}
}

message GreetingRequest {
  string username = 1;
}

message GreetingResponse {
  string message = 1;
}